--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -63,12 +63,18 @@ jobs:
       id: compile
       run: |
         cd openwrt
-        . ../config/common.sh && Diy_menu4
-
-    - name: Set Firmware Update URL
-  run: |
-    echo "FIRMWARE_UPDATE_URL=https://github.com/cdny123/openwrt-i/releases/latest/download/openwrt.tar.gz" >> $GITHUB_OUTPUT
-    
+        
+        # common.sh 的内容开始
+        . ../config/settings.sh
+        
+        # 定义一些函数
+        function Diy_menu4() {
+          # 您的自定义编译脚本
+        }
+        
+        Diy_menu4
+        # common.sh 的内容结束
+        
     - name: Upload Firmware
       uses: actions/upload-artifact@main
       if: steps.compile.outputs.status == 'success'
