--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -36,10 +36,42 @@ jobs:
         fetch-depth: 0
 
     - name: Initialize Environment
-      run: |
-        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-        sudo -E apt-get -qq update
-        sudo -E apt-get -qq install $(curl -fsSL https://is.gd/depend_packages)
+  run: |
+    sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
+    sudo -E apt-get -qq update
+    sudo -E apt-get -qq install \
+      build-essential \
+      asciidoc \
+      binutils \
+      bzip2 \
+      gawk \
+      gettext \
+      git \
+      libncurses5-dev \
+      libz-dev \
+      patch \
+      python3 \
+      unzip \
+      zlib1g-dev \
+      lib32gcc-s1 \
+      libc6-dev-i386 \
+      libssl-dev \
+      libreadline-dev \
+      libglib2.0-dev \
+      libxml2-dev \
+      libpcre3-dev \
+      flex \
+      bison \
+      screen \
+      make \
+      cmake \
+      wget \
+      python \
+      sudo \
+      rsync \
+      upx \
+      node \
+      jq
         
     - name: Clone OpenWrt repository
       run: git clone --depth 1 ${{ env.REPO_URL }} openwrt
