--- a/.github/workflows/openwrt-build.yml
+++ b/.github/workflows/openwrt-build.yml
@@ -1,124 +1,201 @@
-name: OpenWrt Compile
+name: Build iStore OS
 
 on:
+  repository_dispatch:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+    inputs:
+      ssh:
+        description: 'SSH connection to Actions'
+        required: false
+        default: 'false'
   schedule:
-    - cron: '0 2 * * 0'
+   - cron: 0 16 * * *
 
 env:
   REPO_URL: https://github.com/istoreos/istoreos
-  REPO_BRANCH: master
-  CONFIG_FILE: config/x86_64
+  REPO_BRANCH: istoreos-22.03
+  FEEDS_CONF: feeds.conf
+  CONFIG_FILE: .config
+  DIY_P1_SH: diy-part1.sh
+  DIY_P2_SH: diy-part2.sh
+  UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
-  UPLOAD_RELEASE: false
-  CACHEWRTBUILD_SWITCH: true
-  UPDATE_FIRMWARE_ONLINE: true
-  COMPILATION_INFORMATION: true
-  RETAIN_MINUTE: 10080
-  KEEP_LATEST: 10
-  WAREHOUSE_MAN: OpenWrt-Compile
-  LUCI_EDITION: 23.05
-  SOURCE_OWNER: istoreos
-  DIY_WORK: x86_64-build
+  UPLOAD_RELEASE: true
+  TZ: Asia/Shanghai
+  GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
 jobs:
 
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     
     steps:
     - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        fetch-depth: 0
+      uses: actions/checkout@main
 
-    - name: Initialize Environment
-  run: |
-    sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /usr/local/lib/android /opt/ghc
-    sudo -E apt-get -qq update
-    sudo -E apt-get -qq install \
-      build-essential \
-      asciidoc \
-      binutils \
-      bzip2 \
-      gawk \
-      gettext \
-      git \
-      libncurses5-dev \
-      libz-dev \
-      patch \
-      python3 \
-      unzip \
-      zlib1g-dev \
-      lib32gcc-s1 \
-      libc6-dev-i386 \
-      libssl-dev \
-      libreadline-dev \
-      libglib2.0-dev \
-      libxml2-dev \
-      libpcre3-dev \
-      flex \
-      bison \
-      screen \
-      make \
-      cmake \
-      wget \
-      python \
-      sudo \
-      rsync \
-      upx \
-      node \
-      jq
-        
-    - name: Clone OpenWrt repository
-      run: git clone --depth 1 ${{ env.REPO_URL }} openwrt
-      
-    - name: Load Custom Settings
+    - name: Prepare Environment
+      env:
+        DEBIAN_FRONTEND: noninteractive
+      run: |
+        sudo rm -rf /etc/apt/sources.list.d/* /usr/share/dotnet /etc/mysql /etc/php /usr/local/lib/android /opt/ghc
+        sudo -E apt-get -qq update
+        sudo -E apt-get -qq install \
+          build-essential \
+          asciidoc \
+          binutils \
+          bzip2 \
+          gawk \
+          gettext \
+          git \
+          libncurses5-dev \
+          libz-dev \
+          patch \
+          python3 \
+          unzip \
+          zlib1g-dev \
+          lib32gcc-s1 \
+          libc6-dev-i386 \
+          libssl-dev \
+          libreadline-dev \
+          libglib2.0-dev \
+          libxml2-dev \
+          libpcre3-dev \
+          flex \
+          bison \
+          screen \
+          make \
+          cmake \
+          wget \
+          python \
+          sudo \
+          rsync \
+          upx \
+          node \
+          jq
+        wget https://bootstrap.pypa.io/pip/3.6/get-pip.py
+        sudo python3 get-pip.py
+        sudo rm -rf get-pip.py
+        sudo pip install pyelftools
+        docker rmi `docker images -q`
+        docker image prune -a -f
+        sudo -E apt-get -y purge azure-cli ghc* zulu*
+
+    - name: Cache Compilation
+      uses: actions/cache@v2
+      with:
+        path: ~/.cache/op
+        key: ${{ runner.os }}-openwrt-${{ env.REPO_BRANCH }}
+
+    - name: Clone Source Code
+      working-directory: /workdir
+      run: |
+        df -hT $PWD
+        git clone $REPO_URL -b $REPO_BRANCH openwrt
+        ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
+
+    - name: Load Custom Feeds
+      env:
+        FEEDS_CONF_PATH: ${{ matrix.ARCHITECTURE }}/${{ env.FEEDS_CONF }}
+      run: |
+        [ -e $FEEDS_CONF_PATH ] && mv $FEEDS_CONF_PATH openwrt/$FEEDS_CONF
+        chmod +x $DIY_P1_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P1_SH
+
+    - name: Update Feeds
+      run: cd openwrt && ./scripts/feeds update -a
+
+    - name: Install Feeds
+      run: cd openwrt && ./scripts/feeds install -a
+
+    - name: Load Custom Config
+      env:
+        CONFIG_FILE_PATH: ${{ matrix.ARCHITECTURE }}/${{ env.CONFIG_FILE }}
+      run: |
+        [ -e files ] && mv files openwrt/files
+        [ -e $CONFIG_FILE_PATH ] && mv $CONFIG_FILE_PATH openwrt/$CONFIG_FILE
+        chmod +x $DIY_P2_SH
+        cd openwrt
+        $GITHUB_WORKSPACE/$DIY_P2_SH
+
+    - name: SSH Connection to Actions
+      uses: P3TERX/ssh2actions@v1.0.0
+      if: (github.event.inputs.ssh == 'true' && github.event.inputs.ssh  != 'false') || contains(github.event.action, 'ssh')
+      env:
+        TELEGRAM_CHAT_ID: ${{ secrets.TELEGRAM_CHAT_ID }}
+        TELEGRAM_BOT_TOKEN: ${{ secrets.TELEGRAM_BOT_TOKEN }}
+
+    - name: Download Packages
+      id: package
       run: |
         cd openwrt
-        . ../config/settings.sh
-        
-    - name: Diy Part1
-      run: |
-        cd openwrt
-        . ../config/diy-part1.sh
-        
-    - name: Diy Part2  
-      run: |
-        cd openwrt
-        ./scripts/feeds update -a
-        ./scripts/feeds install -a
-        . ../config/diy-part2.sh
-        
+        make defconfig
+        make download -j8
+        find dl -size -1024c -exec ls -l {} \;
+        find dl -size -1024c -exec rm -f {} \;
+
     - name: Compile Firmware
       id: compile
       run: |
         cd openwrt
-        
-        # common.sh 的内容开始
-        . ../config/settings.sh
-        
-        # 定义一些函数
-        function Diy_menu4() {
-          # 您的自定义编译脚本
-        }
-        
-        Diy_menu4
-        # common.sh 的内容结束
-        
-    - name: Upload Firmware
+        echo -e "$(nproc) thread compile"
+        make -j$(nproc) || make -j1 || make -j1 V=s
+        echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
+
+    - name: Check Disk Space
+      if: (!cancelled())
+      run: df -hT
+
+    - name: Upload Bin Folder
       uses: actions/upload-artifact@main
-      if: steps.compile.outputs.status == 'success'
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_BIN_DIR == 'true'
       with:
-        name: OpenWrt
-        path: openwrt/bin/targets/*/*/*.img*
-        
-    - name: Create Release
-      uses: ncipollo/release-action@v1
-      if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true'
+        name: OpenWrt_bin${{ env.FILE_DATE }}
+        path: openwrt/bin
+
+    - name: Organize Firmware Files
+      id: organize
+      if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
+      run: |
+        cd openwrt/bin/targets/*/*
+        rm -rf packages
+        echo "FIRMWARE=$PWD" >> $GITHUB_ENV
+        echo "::set-output name=status::success"
+
+    - name: Upload Firmware Directory
+      uses: actions/upload-artifact@main
+      if: steps.organize.outputs.status == 'success' && !cancelled()
       with:
-        artifacts: openwrt/bin/targets/*/*/*.img*
-        token: ${{ secrets.GITHUB_TOKEN }}
+        name: OpenWrt_firmware${{ env.FILE_DATE }}
+        path: ${{ env.FIRMWARE }}
+
+    - name: Generate Release Tag
+      id: tag
+      if: steps.compile.outputs.status == 'success' && env.UPLOAD_RELEASE == 'true' && !cancelled()
+      run: |
+        echo "::set-output name=release_tag::$(date +"%Y.%m.%d-%H.%M")"
+        touch release.txt
+        echo "
+        💻 Architecture: ${{ matrix.ARCHITECTURE }}
+        📂 Repository: ${{ env.REPO_URL }}
+        🌳 Branch: ${{ env.REPO_BRANCH }}
+        ⏱️ Compile Time: $(date +"%Y-%m-%d %H:%M")
+        🌐 Management Address: 10.0.0.1
+        👤 Username: root
+        🔒 Password: password
+        " >> release.txt
+        echo "::set-output name=status::success"
+
+    - name: Auto Release Firmware
+      uses: softprops/action-gh-release@v1
+      if: steps.tag.outputs.status == 'success' && !cancelled()
+      with:
+        tag_name: ${{ steps.tag.outputs.release_tag }}
+        body_path: release.txt
+        files: ${{ env.FIRMWARE }}/*
+
+    - name: Delete Workflow Runs
+      uses: GitRML/delete-workflow-runs@main
+      with:
+        retain_days: 1
